--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,5 @@
 :root {
+  --border-radius: 9px;
   --color-bg__main: #072c51;
   --color__main: #f4f4f4;
   --color__second: #d7d1d1;
@@ -95,10 +96,20 @@ footer p {
 
 #mozarts-ghost {
   position: fixed;
-  opacity: 0.4;
+  opacity: 1;
   bottom: 0;
   left: 10px;
   padding: 10px;
+}
+
+#mozarts-ghost a:link,
+#mozarts-ghost a:visited {
+  color: rgb(164, 164, 235);
+  text-decoration: none;
+}
+
+#mozarts-ghost a:hover {
+  color: rgb(195, 0, 255);
 }
 
 .button-effect { 
